# unisphere_fastapi

./: .dockerignore  .env.prod.template  .env.test  .gitattributes  .gitignore  Dockerfile  Dockerfile.nginx  Dockerfile.prod  Dockerfile.test  Jenkinsfile  Makefile  README.md  create_announcements_table.py  docker-compose.prod.yml  docker-compose.test.yml  migrate_event_capacity.py  poetry.toml  pyproject.toml  test_event_management.py  test_image_upload.py  test_profile_debug.py  test_server_profile.py  test_upload_integration.py  test_upload_service.py  update_event_schema.py
.devcontainer/: Dockerfile.dev  devcontainer.json  docker-compose.dev.yml
app/: main.py
app/core/: config.py  dependencies.py
app/models/: __init__.py  announcement_model.py  course_model.py  event_model.py  user_model.py
app/routes/v1/: auth.py
app/schemas/: course_schema.py  user_schema.py
nginx/certs/: _wildcard.tom.certtest-key.pem  _wildcard.tom.certtest.pem  unisphere.crt  unisphere.key
nginx/conf/: tom.conf
scripts/: init_db.py  run-api-dev  run-api-dev.sh  run-api-uvicorn.sh
tests/: conftest.py  test_auth.py  test_greeting.py  test_user_places.py
unisphere/: main.py
unisphere/core/: config.py  security.py
unisphere/models/: __init__.py  announcement_model.py  branch_model.py  checkin_model.py  course_model.py  day_of_week_model.py  event_model.py  faculty_model.py  greeting_model.py  group_chat_model.py  notification_model.py  schedule_model.py  section_instructor.py  section_model.py  semester_model.py  user_enroll_model.py  user_model.py  user_place_model.py
unisphere/routes/: __init__.py  health.py
unisphere/routes/v1/: __init__.py  announcement_router.py  auth_router.py  branch_router.py  course_router.py  day_of_week_router.py  event_router.py  faculty_router.py  greeting_router.py  schedule_router.py  section_router.py  semester_router.py  upload_router.py  user_place_router.py
unisphere/schemas/: announcement_schema.py  branch_schema.py  branch_translation_schema.py  course_schema.py  course_translation_schema.py  day_of_week_schema.py  day_of_week_translation_schema.py  event_schema.py  faculty_schema.py  faculty_translation_schema.py  greeting_schema.py  schedule_schema.py  section_instructor_schema.py  section_rrule_schema.py  section_schema.py  semester_schema.py  upload_schema.py  user_checkin_schema.py  user_enroll_schema.py  user_notification_schema.py  user_place_schema.py  user_schedule_override_schama.py  user_schedule_template_schema.py  user_schema.py
unisphere/services/: announcement_service.py  event_service.py  upload_service.py
unisphere/services/auth_service/: AuthServiceInterface.py  DBAuthService.py  MockAuthService.py
unisphere/services/branch_service/: DBBranchService.py  (+1 more)
(+16 files in other folders)
