[tool.poetry]
name = "unisphere-fastapi"
version = "0.1.0"
description = ""
authors = ["6510110632 <nydukkung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
