[tool.poetry]
name = "unisphere-fastapi"
version = "0.1.0"
description = ""
authors = ["6510110632 <nydukkung@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
fastapi-cli = "^0.0.11"
uvicorn = "^0.35.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
pydantic-settings = "^2.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
email-validator = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
