[project]
name = "unisphere-fastapi"
version = "0.1.0"
description = ""
authors = [
    { name = "Thanutham Tuktian", email = "thanutham.tn@gmail.com" },
    { name = "Thanutham Tuktian", email = "thanutham.tn@gmail.com" },
    { name = "Thanutham Tuktian", email = "thanutham.tn@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi (>=0.117.1,<0.118.0)",
    "fastapi-cli (>=0.0.13,<0.0.14)",
    "sqlmodel (>=0.0.25,<0.0.26)",
    "pydantic[email] (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "email-validator (>=2.3.0,<3.0.0)",
    "redis (>=6.4.0,<7.0.0)",
    "types-python-jose (>=3.5.0.20250531,<4.0.0.0)",
    "bcrypt (>=4.0.0,<5.0.0)",
    "PyJWT (>=2.8.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "httpx (>=0.28.1,<0.29.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-asyncio (>=1.2.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]

[tool.ruff]
# Exclude test files from certain linting rules
[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["BLE001", "PLW0603"]  # Allow general exceptions and global statements in tests

[tool.pylint]
# Disable certain warnings for test files
[tool.pylint.messages_control]
disable = ["broad-except", "global-statement"]

[tool.pylint.per-file-ignores]
"test_*.py" = ["broad-except", "global-statement"]
